[최병호] 업로드한 파일 이름 보여주기.

--- a/src/views/client/posts/postWrite.ejs
+++ b/src/views/client/posts/postWrite.ejs
@@ -95,6 +95,10 @@
             }
           }
         }
+        // 파일 추가 시 파일명 표시
+        const fileNames = imageArray.map((file) => file.name).join("<br>");
+        const upload = document.querySelector(".upload");
+        upload.appendChild(document.createElement("div")).innerHTML = fileNames;
       });
 
       $form.addEventListener("submit", async (e) => {
