--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -79,9 +79,11 @@
             </div>
             <div class="commentButton">
               <!-- 코멘트 없을 때 -->
-              <!-- <i class="fa-regular fa-comment"></i> -->
+              <% if (post.comments.length > 0) {%>
               <i class="fa-solid fa-comment"></i>
-              1
+              <%= post.comments.length %> <%} else {%>
+              <i class="fa-regular fa-comment"></i>
+              0 <% } %>
             </div>
             <div>
               <!-- 즐찾 안했을 때 투명별 -->
