[최병호] 프로필 사진 나오도록 변경

--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -16,7 +16,7 @@
   <body>
     <div id="wrap">
       <div class="inner">
-        <%- include('../../_layouts/header-menu', { category: category }) %>
+        <%- include('../../_layouts/header-menu', { category: category, userId: userId}) %>
         <section class="post">
           <!-- 유저 정보 영역 시작 -->
           <div class="postTop">
